# filechain

./: .gitignore  .prettierignore  Dockerfile  README.md  components.json  eslint.config.js  package-lock.json  package.json  svelte-check-output.txt  svelte.config.js  vite.config.ts
.agents/rules/: backend.md  svelte.md  typescript.md
.github/instructions/: database.instructions.md  project.instructions.md  svelte.instructions.md  typescript.instructions.md
.github/workflows/: ci.yml  codeql.yml
e2e/: login.test.ts
rust/: Cargo.toml
rust/src/: block_signature.rs  decrypt_file.rs  encrypt_file.rs  lib.rs  masterkey_decryptor.rs  masterkey_generator.rs
src/: app.d.ts  hooks.server.ts  vite-plugin-top-level-await.d.ts
src/lib/assets/: copyright-bro.svg:Zone.Identifier
src/lib/classes/: TableClass.svelte.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  layout.css  page.svelte.spec.ts
supabase/migrations/: 202604220001_add_client_profiles_is_individual.sql  20260509075152_fix_service_role_permissions.sql  20260520101800_grant_service_role_select_api_ip_applications.sql  20260531093400_contact_details_to_array.sql  20260620150000_add_system_metrics_rpc.sql  20260620153500_move_system_metrics_to_api.sql  20260620161500_add_has_secret_to_user_profiles_view.sql  20260623105000_add_ipophil_link_remove_paper_document_no.sql  20260623112400_add_user_permissions.sql  20260625155000_add_storage_size_to_system_metrics.sql  20260625161500_add_storage_metrics_rpc.sql  20260625163000_remove_storage_from_system_metrics.sql
(+349 files in other folders)
