[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
wasm-bindgen = "0.2"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
zeroize = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
